// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LCPresentation reducer @@letters-of-credit-presentation/CREATE_PRESENTATION_SUCCESS should store presentation in reducer when presentation is created 1`] = `
Immutable.Map {
  "byLetterOfCreditReference": Immutable.Map {
    "2018-BP-16": Immutable.List [
      Object {
        "LCReference": "2018-BP-16",
        "applicantId": "a3d82ae6-908c-49da-95b3-ba1ebe7e5f85",
        "beneficiaryComments": "",
        "beneficiaryId": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
        "documents": Array [
          Object {
            "dateProvided": "2019-02-04T14:47:26.988Z",
            "documentHash": "tradedasdsadaFinance",
            "documentId": "bddd54e3-4369-4627-9a9c-4f0ed186eab4",
            "documentTypeId": "tradeFinance",
            "status": "DRAFT",
          },
        ],
        "issuingBankComments": "",
        "issuingBankId": "a28b8dc3-8de9-4559-8ca1-272ccef52b47",
        "nominatedBankComments": "",
        "nominatedBankId": "a28b8dc3-8de9-4559-8ca1-272ccef52b48",
        "reference": "123",
        "stateHistory": Array [
          Object {
            "date": "2019-02-19T08:22:47.686Z",
            "performer": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
            "toState": "DRAFT",
          },
        ],
        "staticId": "123",
        "status": "DRAFT",
      },
    ],
  },
  "documentsByPresentationId": Immutable.Map {},
  "vaktDocuments": Immutable.Map {},
}
`;

exports[`LCPresentation reducer @@letters-of-credit-presentation/FETCH_PRESENTATION_DOCUMENTS_SUCCESS should store documents when they are loaded 1`] = `
Immutable.Map {
  "byLetterOfCreditReference": Immutable.Map {},
  "documentsByPresentationId": Immutable.Map {
    "5c5441638d960da68ca87b81": Immutable.List [
      Immutable.Map {
        "registrationDate": 2019-02-04T14:47:26.988Z,
        "name": "AML Letter - test",
        "sharedWith": Immutable.List [
          Immutable.Map {
            "counterpartyId": "societegenerale",
            "sharedDates": Immutable.List [
              2019-02-04T14:47:26.988Z,
            ],
          },
        ],
        "hash": "hash",
        "product": Immutable.Map {
          "name": "TRADE FINANCE",
          "id": "tradeFinance",
        },
        "receivedDate": 2019-02-04T14:47:26.988Z,
        "context": Immutable.Map {
          "productId": "tradeFinance",
          "subProductId": "lc",
          "lcPresentationStaticId": "5c5441638d960da68ca87b81",
        },
        "metadata": Immutable.List [],
        "state": "REGISTERED",
        "owner": Immutable.Map {
          "firstName": "Owner",
          "lastName": "Owner",
          "companyId": "company-id",
        },
        "documentId": "document-id",
        "content": undefined,
        "type": Immutable.Map {
          "id": "2",
          "name": "type-name",
          "product": Immutable.Map {
            "name": "TRADE FINANCE",
            "id": "tradeFinance",
          },
          "category": Immutable.Map {
            "id": "banking-documents",
            "name": "banking-documents",
            "product": Immutable.Map {
              "name": "TRADE FINANCE",
              "id": "tradeFinance",
            },
          },
          "fields": Immutable.List [],
          "predefined": true,
        },
        "id": "1",
        "sharedBy": "",
        "category": Immutable.Map {
          "id": "banking-documents",
          "name": "banking-documents",
          "product": Immutable.Map {
            "name": "TRADE FINANCE",
            "id": "tradeFinance",
          },
        },
      },
    ],
  },
  "vaktDocuments": Immutable.Map {},
}
`;

exports[`LCPresentation reducer @@letters-of-credit-presentation/FETCH_PRESENTATIONS_SUCCESS should store presentations in reducer when presentations are fetched 1`] = `
Immutable.Map {
  "byLetterOfCreditReference": Immutable.Map {
    "2018-BP-16": Immutable.List [
      Immutable.Map {
        "beneficiaryId": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
        "stateHistory": Immutable.List [
          Immutable.Map {
            "toState": "DRAFT",
            "performer": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
            "date": "2019-02-19T08:22:47.686Z",
          },
        ],
        "issuingBankComments": "",
        "staticId": "123",
        "reference": "123",
        "issuingBankId": "a28b8dc3-8de9-4559-8ca1-272ccef52b47",
        "status": "DRAFT",
        "nominatedBankComments": "",
        "LCReference": "2018-BP-16",
        "documents": Immutable.List [
          Immutable.Map {
            "documentId": "bddd54e3-4369-4627-9a9c-4f0ed186eab4",
            "documentHash": "tradedasdsadaFinance",
            "status": "DRAFT",
            "documentTypeId": "tradeFinance",
            "dateProvided": "2019-02-04T14:47:26.988Z",
          },
        ],
        "beneficiaryComments": "",
        "nominatedBankId": "a28b8dc3-8de9-4559-8ca1-272ccef52b48",
        "applicantId": "a3d82ae6-908c-49da-95b3-ba1ebe7e5f85",
      },
    ],
  },
  "documentsByPresentationId": Immutable.Map {},
  "vaktDocuments": Immutable.Map {},
}
`;

exports[`LCPresentation reducer defaults returns the initial state 1`] = `
Immutable.Map {
  "byLetterOfCreditReference": Immutable.Map {},
  "documentsByPresentationId": Immutable.Map {},
  "vaktDocuments": Immutable.Map {},
}
`;
